--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,8 +1,9 @@
 
-
-.wrapper {
-    width: 100%
+html {
+    margin: 0;
+    padding: 0;
 }
+
 
 header,
 body {
@@ -51,6 +52,9 @@ nav i {
     padding: 15px;
 }
 
+body {
+    width: 100%;
+}
 
 /* Links */
 a {
@@ -119,4 +123,64 @@ main {
     position: relative;
     top: 1300px;
     left: 820px;
+}
+
+@media only screen and (max-width: 760px){
+  header{
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  }
+
+  header {
+    display: flex;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    width: 1100px;
+  }
+
+  main {
+      flex-direction: column;
+  }
+  
+nav ul {
+    padding: 0px;
+    }
+    
+    .shopnow {
+        text-align: center;
+        position: relative;
+        top: -400px;
+        left: 66px;
+    }
+ 
+    .shopnow-button {
+        background-color: #5f5f616c;
+        color: white;
+        font-size: 20px;
+        line-height: 1;
+        padding: 20px 35px;
+        border-radius: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    
+    .shopwoman {
+        text-align: center;
+        position: relative;
+        top: 1250px;
+        left: 345px;
+    }
+
+
+    .shopman {
+        text-align: center;
+        position: relative;
+        top: 1300px;
+        left: 345px;
+    }
+
 }
