--- a/css/Styles.css
+++ b/css/Styles.css
@@ -68,6 +68,8 @@ a {
 
 main {
     display: flex;
+    width: 100%;
+    margin: auto;
 }
 
 .cta-woman {
@@ -88,6 +90,13 @@ main {
     position: absolute;
     left: -288px;
     top: 104px;
+}
+
+.View {
+    background-color: #707070d8;
+    color: white;
+    font-size: 16px;
+    padding: 5px 10px;
 }
 
 .shopnow img {
@@ -141,7 +150,7 @@ main {
     align-items: center;
     display: flex;
     align-items: center;
-    width: 1100px;
+    width: 900px;
   }
 
   main {
@@ -157,7 +166,8 @@ nav ul {
         position: relative;
         top: -400px;
         left: 66px;
-        width: 1000px;
+        width: 100%;
+        min-width: 800px;
     }
  
     .shopnow-button {
@@ -188,11 +198,20 @@ nav ul {
         left: 345px;
     }
 
+    .JacketMale {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
+
+h2 {
+    font-size: 16px;
+    color: rgb(75, 75, 75);
 }
 
 .JacketMale{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     max-width: 1000px;
     margin: 70px auto;
     grid-gap: 60px;
@@ -210,6 +229,6 @@ nav ul {
     grid-gap: 60px;
 }
 
-.jacketFemale img {
+.JacketFemale img {
     width: 100%;
 }
