--- a/css/Styles.css
+++ b/css/Styles.css
@@ -198,37 +198,82 @@ nav ul {
         left: 345px;
     }
 
-    .JacketMale {
-        grid-template-columns: repeat(1, 1fr);
-    }
+
+/* List of Jackets */
+
+.JacketMale {
+    grid-template-columns: repeat(1, 1fr);
+}
 
 }
 
 h2 {
-    font-size: 16px;
-    color: rgb(75, 75, 75);
+font-size: 16px;
+color: rgb(75, 75, 75);
 }
 
 .JacketMale{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    max-width: 1000px;
-    margin: 70px auto;
-    grid-gap: 60px;
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+max-width: 1000px;
+margin: 70px auto;
+grid-gap: 60px;
 }
 
 .JacketMale img{
-    width: 100%;
+width: 100%;
 }
 
-.JacketFemale {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
+
+
+
+/* Product detailed page */
+
+.product-details{
+    display: flex;
     max-width: 1000px;
     margin: 70px auto;
-    grid-gap: 60px;
+
 }
 
-.JacketFemale img {
-    width: 100%;
+.product-details > * {
+    flex: 1;
+}
+
+ .details {
+     width: 100%;
+ }
+
+ .Prod234 {
+     display: flex;
+     width: 134px;
+     gap: 10px;
+     margin-top: 10px;
+ }
+ .info {
+     margin: 10px auto;
+     margin-left: 60px;
+     padding: 50px;
+ }
+
+.prod-info {
+    line-height: 5px;
+}
+
+.choose {
+    margin: 3px;
+}
+
+.Size {
+    display: inline-block;
+    background-color: rgba(128, 128, 128, 0.521);
+    padding: 5px 7px;
+}
+
+.cta-cart {
+    background-color: #5f5f616c;
+    color: white;
+    font-size: 20px;
+    padding: 20px 35px;
+    border-radius: 30px;
 }
