--- a/css/Styles.css
+++ b/css/Styles.css
@@ -319,7 +319,8 @@ main{
     width: 100%;
 }
 
-main img {
+.img1,
+.img2 {
     width: 100%;
     max-width: 300px;
     position: absolute;
@@ -413,4 +414,34 @@ p {
     .aboutus {
         display: none;
     }
+}
+
+
+
+/* Order successful */
+
+.check {
+    display: block;
+    width: 50%;
+    text-align: center;
+}
+
+.shopping {
+    background-color: #7070704f;
+    color: white;
+    font-size: 20px;
+    padding: 20px 35px;
+    border-radius: 30px;
+    margin-top: 20px;
+}
+
+
+.wishlist {
+    font-size: 20px;
+    background-color: #7070704f;
+    color: white;
+    font-size: 20px;
+    padding: 20px 10px;
+    border-radius: 30px;
+    margin-top: 20px;
 }
