--- a/css/Styles.css
+++ b/css/Styles.css
@@ -34,15 +34,14 @@ header a {
 header {
     display: flex;
     align-items: center;
-    display: flex;
-    align-items: center;
-    height: 125px;
+    height: 130px;
     width: 100%;
+    margin: 0;
 
 }
 
 nav ul {
-padding: 150px;
+padding: 50px;
 }
 
 nav li {
@@ -50,16 +49,17 @@ nav li {
 }
 
 nav a {
-    padding: 15px;
+    padding: 5px;
 }
 
 nav i {
     padding-left: 50px;
-    padding: 15px;
+    padding: 10px;
 }
 
 body {
     width: 100%;
+    margin: 0;
 }
 
 /* Links */
@@ -75,7 +75,7 @@ a {
 .home {
     display: flex;
     width: 100%;
-    margin: auto;
+    margin: 0;
 }
 
 .cta-woman {
@@ -112,8 +112,7 @@ a {
 .shopnow {
     text-align: center;
     position: relative;
-    top: 125px;
-    left: 200px;
+   margin-top: 100px;
 }
 
 .shopnow-button {
