--- a/css/Styles.css
+++ b/css/Styles.css
@@ -322,6 +322,7 @@ width: 100%;
     display: flex;
     margin: 70px 50px auto;
     width: 100%;
+    margin-left: 200px;
 
 }
 
@@ -473,7 +474,7 @@ width: 100%;
 
 .shopping {
     background-color: #7070704f;
-    color: white;
+    color: rgb(252, 248, 248);
     font-size: 20px;
     padding: 20px 35px;
     border-radius: 30px;
@@ -483,7 +484,7 @@ width: 100%;
 
 .wishlist {
     background-color: #7070704f;
-    color: white;
+    color: rgb(245, 236, 236);
     font-size: 20px;
     padding: 20px 35px;
     border-radius: 30px;
@@ -572,7 +573,7 @@ input {
   
 }
 
-button {
+.submit {
     background-color: #5a5a5ce5;
     color: white;
     font-size: 20px;
@@ -591,3 +592,151 @@ label {
     padding: 50px;
     width: 150px;
 }
+
+button {
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    border: none;
+}
+
+.cart{
+	margin: 0;
+	padding: 0;
+	background: linear-gradient(to bottom right, #bebebe, #ededee);
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.cartContainer{
+	width: 70%;
+	height: 90%;
+	background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0px 10px 20px #1687d933;
+}
+
+.header{
+	margin: auto;
+	width: 90%;
+	height: 15%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.h3{
+	font-size: 20px;
+	font-family: 'Open Sans';
+	font-weight: 700;
+	color: #2F3841;
+}
+
+
+.Cart-Items{
+	margin: auto;
+	width: 90%;
+	height: 30%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.image-box{
+	width: 15%;
+	text-align: center;
+}
+.about{
+	height: 100%;
+	width: 24%;
+}
+.title{
+	padding-top: 10px;
+	line-height: 10px;
+	font-size: 32px;
+	font-family: 'Open Sans';
+	font-weight: 800;
+	color: #202020;
+}
+.subtitle{
+	line-height: 10px;
+	font-size: 18px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #909090;
+}
+
+.counter{
+	width: 15%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.btn{
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	font-family: 'Open Sans';
+	font-weight: 900;
+	color: #202020;
+	cursor: pointer;
+}
+.count{
+	font-size: 20px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #202020;
+}
+
+.prices{
+	height: 100%;
+	text-align: right;
+}
+.amount{
+	padding-top: 20px;
+	font-size: 26px;
+	font-family: 'Open Sans';
+	font-weight: 800;
+	color: #202020;
+}
+.save{
+	padding-top: 5px;
+	font-size: 14px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #1687d9;
+	cursor: pointer;
+}
+.remove{
+	padding-top: 5px;
+	font-size: 14px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #E44C4C;
+	cursor: pointer;
+}
+
+.payment {
+    display: flex;
+    justify-content: center;
+}
+
+.ccv {
+    margin-bottom: 100px;
+}
+
+.bckcart, 
+.purchase {
+    background-color: #5a5a5c98;
+    font-size: 20px;
+    line-height: 1;
+    padding: 7px 35px;
+    margin-top: 100px;
+    cursor: pointer;
+}
+
